syntax = "proto3";

package nodedata.v1;
option go_package = "dev-tools-services/gen/nodedata/v1;nodedatav1";


message NodeApiCallData {
	string url = 1;
	string method = 2;
        map<string, string> query_params = 3;
        map<string, string> headers = 4;
        bytes body = 5;
}

message NodeForRemote {
        uint64 count = 1;
	string loop_start_node = 2;
	uint64 machine_emount = 3;
        string slave_http_endpoint = 4;
}
